--- a/7.3 CSS Flag Project/index.html
+++ b/7.3 CSS Flag Project/index.html
@@ -57,7 +57,7 @@ https://appbrewery.github.io/flag-of-laos/
   <div class="flag">
     <p>The Flag</p>
     <div>
-      <div class>
+      <div>
         <p>of Laos</p>
       </div>
     </div>
