--- a/11.0 Bootstrap Intro/index.html
+++ b/11.0 Bootstrap Intro/index.html
@@ -27,7 +27,7 @@
       <img src="flower.jpg" class="card-img-top" alt="sun flower">
       <div class="card-body">
         <h5 class="card-title">Beautiful Flowers</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut, provident molestiae iste ipsam placeat incidunt ex, eum dolorum porro quos temporibus repudiandae est hic libero! Molestias placeat mollitia illum nihil.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
