change of image in Bootstrap layout

--- a/11.0 Bootstrap Intro/index.html
+++ b/11.0 Bootstrap Intro/index.html
@@ -15,7 +15,6 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-
    }
 
   </style>
@@ -24,11 +23,11 @@
 <body>
   <div class="flex-container">
     <div class="card" style="width: 18rem;">
-      <img src="flower.jpg" class="card-img-top" alt="sun flower">
+      <img src="IMG_4375.jpeg" width="285" height="300" card-img-top" alt="sun flower">
       <div class="card-body">
-        <h5 class="card-title">Beautiful Flowers</h5>
-        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut, provident molestiae iste ipsam placeat incidunt ex, eum dolorum porro quos temporibus repudiandae est hic libero! Molestias placeat mollitia illum nihil.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">My Dear Boyfriend </h5>
+        <p class="card-text"> "You stole my heart and my snacks. Now give them back!".</p>
+        <a href="#" class="btn btn-primary">Give me back Ima mi </a>
       </div>
     </div>
     <!-- TODO 2: Add the Bootstrap Prebuilt Card here -->
